fix alignment

--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ a {
     display: flex;
 }
 .column {
-    flex: 50%;
+    flex: 45%;
     align-items: center;
 
 }
